[gd_scene load_steps=33 format=3 uid="uid://df2v4s8t5i3df"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_k0lh5"]
[ext_resource type="Script" path="res://scripts/camera_controller.gd" id="2_4qkjv"]
[ext_resource type="Shader" path="res://materials/dither.gdshader" id="2_ek6qi"]
[ext_resource type="FontFile" uid="uid://dutqsnhuaoj3k" path="res://addons/TooMuchInk.ttf" id="2_wael4"]
[ext_resource type="Script" path="res://scripts/cam_position_controller.gd" id="3_wuf4r"]
[ext_resource type="AudioStream" uid="uid://bonmldkdtchxy" path="res://audio/wind_with_birds.ogg" id="4_10f2p"]
[ext_resource type="Script" path="res://scripts/maze.gd" id="4_t62du"]
[ext_resource type="Script" path="res://scripts/spirit_maze.gd" id="6_31b17"]
[ext_resource type="PackedScene" uid="uid://ccrqvx3f1ld8d" path="res://scenes/level_test_2.tscn" id="7_s7lnq"]
[ext_resource type="Script" path="res://scenes/number_of_keys.gd" id="7_yrpr6"]
[ext_resource type="Script" path="res://scripts/press_e_to_see.gd" id="8_lhjlu"]
[ext_resource type="PackedScene" uid="uid://tjmkqkxrwcfe" path="res://scenes/gardencube.tscn" id="8_sjyok"]
[ext_resource type="PackedScene" uid="uid://b45ckjo3dxto8" path="res://scenes/gardenspiritcube.tscn" id="9_tp1s6"]
[ext_resource type="PackedScene" uid="uid://da52xtucg8lsq" path="res://scenes/player.tscn" id="10_87lgo"]
[ext_resource type="PackedScene" uid="uid://pyd8eabacdfo" path="res://scenes/island.tscn" id="11_388xy"]
[ext_resource type="AudioStream" uid="uid://c3f2yqfdvhed4" path="res://audio/spirit_bell.mp3" id="11_nb87a"]
[ext_resource type="PackedScene" uid="uid://b4605g01prjdj" path="res://scenes/enchanted_stone_item.tscn" id="12_27mv2"]
[ext_resource type="AudioStream" uid="uid://brgan8ujo3h2a" path="res://audio/spirit_bell2.mp3" id="12_v4qew"]
[ext_resource type="PackedScene" uid="uid://dnf56ntnsjrr8" path="res://scenes/island2.tscn" id="13_ugnde"]
[ext_resource type="PackedScene" uid="uid://dwx34vosexxqv" path="res://scenes/minibridge.tscn" id="14_a8r3g"]
[ext_resource type="PackedScene" uid="uid://7o01h8b6k5lc" path="res://scenes/key.tscn" id="15_f4wji"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ebt1"]
shader = ExtResource("2_ek6qi")
shader_parameter/enabled = true
shader_parameter/dithering = true
shader_parameter/colors = 12
shader_parameter/dither_size = 2

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_iqxp5"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_tloi7"]
sky_material = SubResource("ProceduralSkyMaterial_iqxp5")

[sub_resource type="Environment" id="Environment_436tx"]
background_mode = 1
background_color = Color(0.0473644, 0.04493, 0.0161547, 1)
background_energy_multiplier = 1.17
sky = SubResource("Sky_tloi7")
ambient_light_source = 3
ambient_light_color = Color(0.748931, 0.802387, 0.872464, 1)
ambient_light_sky_contribution = 0.92
ambient_light_energy = 4.73
tonemap_mode = 2
glow_enabled = true
volumetric_fog_density = 0.9214
volumetric_fog_albedo = Color(0.876536, 0.768779, 0.749289, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_82kw3"]
size = Vector3(9.26367, 6.68372, 7.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_hb1u3"]
size = Vector3(10, 6, 9)

[sub_resource type="BoxShape3D" id="BoxShape3D_48mhf"]
size = Vector3(6, 6.68463, 7.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_s5guh"]
size = Vector3(5.58893, 6.68463, 7.06396)

[sub_resource type="BoxShape3D" id="BoxShape3D_nnuo3"]
size = Vector3(5.58893, 8.03731, 9.95605)

[sub_resource type="BoxShape3D" id="BoxShape3D_fm7b4"]
size = Vector3(8, 12, 9.95605)

[sub_resource type="BoxShape3D" id="BoxShape3D_tccfs"]
size = Vector3(3, 9.5, 9)

[node name="main" type="Node3D"]
script = ExtResource("1_k0lh5")

[node name="spiritbell" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_nb87a")

[node name="spiritbell2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_v4qew")

[node name="ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_10f2p")
volume_db = 5.0
parameters/looping = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_5ebt1")
custom_minimum_size = Vector2(800, 600)
offset_right = 40.0
offset_bottom = 40.0

[node name="ui" type="Control" parent="SubViewportContainer"]
layout_mode = 2

[node name="Keys" type="Label" parent="SubViewportContainer/ui"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 57.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_wael4")
theme_override_font_sizes/font_size = 20
text = "Keys:"

[node name="number of keys" type="Label" parent="SubViewportContainer/ui"]
layout_mode = 0
offset_left = 61.31
offset_top = 5.0
offset_right = 73.31
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_wael4")
theme_override_font_sizes/font_size = 20
script = ExtResource("7_yrpr6")

[node name="out of 3" type="Label" parent="SubViewportContainer/ui"]
layout_mode = 0
offset_left = 75.475
offset_top = 5.0
offset_right = 95.475
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_wael4")
theme_override_font_sizes/font_size = 20
text = "/3"

[node name="timer" type="Label" parent="SubViewportContainer/ui"]
visible = false
layout_mode = 0
offset_left = 668.2
offset_top = 5.0
offset_right = 720.2
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_wael4")
theme_override_font_sizes/font_size = 20
text = "Time:"

[node name="win" type="Label" parent="SubViewportContainer/ui"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 32.0
offset_right = 240.0
offset_bottom = 88.0
theme_override_fonts/font = ExtResource("2_wael4")
theme_override_font_sizes/font_size = 56
text = "You Win!"

[node name="win2" type="Label" parent="SubViewportContainer/ui"]
visible = false
layout_mode = 0
offset_left = 9.0
offset_top = 83.0
offset_right = 177.0
offset_bottom = 139.0
theme_override_fonts/font = ExtResource("2_wael4")
theme_override_font_sizes/font_size = 45
text = "Yipee!"

[node name="yap" type="Label" parent="SubViewportContainer/ui"]
layout_mode = 0
offset_left = 8.0
offset_top = 532.0
offset_right = 791.0
offset_bottom = 588.0
theme_override_fonts/font = ExtResource("2_wael4")
theme_override_font_sizes/font_size = 26
text = "Thanks for playing dawg"
autowrap_mode = 1

[node name="press e to see" type="Label" parent="SubViewportContainer/ui"]
layout_mode = 0
offset_left = 2.0
offset_top = 270.0
offset_right = 801.0
offset_bottom = 373.0
theme_override_colors/font_color = Color(0.543871, 0.894594, 1, 1)
theme_override_fonts/font = ExtResource("2_wael4")
theme_override_font_sizes/font_size = 66
text = "PRESS 'E' TO SEE"
horizontal_alignment = 1
script = ExtResource("8_lhjlu")

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(800, 600)
render_target_update_mode = 4

[node name="game" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/game"]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, -1.23741, 0)
light_color = Color(0.848673, 0.756314, 0.49419, 1)
light_energy = 0.469
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/game"]
environment = SubResource("Environment_436tx")

[node name="camera_controller" type="Node3D" parent="SubViewportContainer/SubViewport/game"]
script = ExtResource("3_wuf4r")

[node name="camRoot" type="Node3D" parent="SubViewportContainer/SubViewport/game/camera_controller"]
script = ExtResource("2_4qkjv")

[node name="camYaw" type="Node3D" parent="SubViewportContainer/SubViewport/game/camera_controller/camRoot"]

[node name="camPitch" type="Node3D" parent="SubViewportContainer/SubViewport/game/camera_controller/camRoot/camYaw"]

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/game/camera_controller/camRoot/camYaw/camPitch"]
transform = Transform3D(-1, -5.03933e-08, 7.14371e-08, 0, 0.817145, 0.576432, -8.74228e-08, 0.576432, -0.817145, -0.0251159, 2.03093, -2.87846)
fov = 50.0

[node name="camera_areas" type="Node3D" parent="SubViewportContainer/SubViewport/game"]

[node name="cam_1" type="Area3D" parent="SubViewportContainer/SubViewport/game/camera_areas"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/game/camera_areas/cam_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.84186, 1.88818)
shape = SubResource("BoxShape3D_82kw3")

[node name="cam_2" type="Area3D" parent="SubViewportContainer/SubViewport/game/camera_areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12.7824)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/game/camera_areas/cam_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.368165, 3.18463, 4.46496)
shape = SubResource("BoxShape3D_hb1u3")

[node name="cam_3" type="Area3D" parent="SubViewportContainer/SubViewport/game/camera_areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -22.7824)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/game/camera_areas/cam_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.36817, 2.84232, 5.21496)
shape = SubResource("BoxShape3D_48mhf")

[node name="cam_4" type="Area3D" parent="SubViewportContainer/SubViewport/game/camera_areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -22.7824)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/game/camera_areas/cam_4"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -5.6384, 2.84232, 1.9132)
shape = SubResource("BoxShape3D_s5guh")

[node name="cam_5" type="Area3D" parent="SubViewportContainer/SubViewport/game/camera_areas"]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 5, 0, -21.7824)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/game/camera_areas/cam_5"]
transform = Transform3D(0.707107, 0, 0.707108, 0, 1, 0, -0.707108, 0, 0.707107, -6.24564, 3.83819, 0.734217)
shape = SubResource("BoxShape3D_nnuo3")

[node name="cam_6" type="Area3D" parent="SubViewportContainer/SubViewport/game/camera_areas"]
transform = Transform3D(0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, 5, 0, -21.7824)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/game/camera_areas/cam_6"]
transform = Transform3D(0.866026, 0, 0.500001, 0, 1, 0, -0.500001, 0, 0.866026, -12.2949, 5.81954, -8.58265)
shape = SubResource("BoxShape3D_fm7b4")

[node name="cam_7" type="Area3D" parent="SubViewportContainer/SubViewport/game/camera_areas"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12.7824)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/game/camera_areas/cam_7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.86817, 1.43463, 5.46496)
shape = SubResource("BoxShape3D_tccfs")

[node name="player" parent="SubViewportContainer/SubViewport/game" node_paths=PackedStringArray("camera") instance=ExtResource("10_87lgo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
camera = NodePath("../camera_controller/camRoot/camYaw")

[node name="maze" type="Node3D" parent="SubViewportContainer/SubViewport/game" groups=["real"]]
script = ExtResource("4_t62du")

[node name="level_test_2" parent="SubViewportContainer/SubViewport/game/maze" instance=ExtResource("7_s7lnq")]

[node name="gardencube" parent="SubViewportContainer/SubViewport/game/maze" instance=ExtResource("8_sjyok")]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, -1, 2, -18)

[node name="gardencube3" parent="SubViewportContainer/SubViewport/game/maze" instance=ExtResource("8_sjyok")]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 1, 4, -26.5)

[node name="gardencube4" parent="SubViewportContainer/SubViewport/game/maze" instance=ExtResource("8_sjyok")]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 3, 4, -30)

[node name="gardencube2" parent="SubViewportContainer/SubViewport/game/maze" instance=ExtResource("8_sjyok")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 3, -19)

[node name="island3" parent="SubViewportContainer/SubViewport/game/maze" instance=ExtResource("11_388xy")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -6.5, 1, -22)

[node name="enchanted_stone_item" parent="SubViewportContainer/SubViewport/game/maze" instance=ExtResource("12_27mv2")]
transform = Transform3D(0.994222, 0, 0, 0, 0.994222, 0, 0, 0, 0.994222, -6.02204, 3.72516, -21.4204)

[node name="island4" parent="SubViewportContainer/SubViewport/game/maze" instance=ExtResource("13_ugnde")]
transform = Transform3D(-0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, -0.866025, 6.5, 4, -36)

[node name="minibridge" parent="SubViewportContainer/SubViewport/game/maze" instance=ExtResource("14_a8r3g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 6.5, 6)

[node name="spirit_maze" type="Node3D" parent="SubViewportContainer/SubViewport/game" groups=["spirit"]]
script = ExtResource("6_31b17")

[node name="keys" type="Node3D" parent="SubViewportContainer/SubViewport/game/spirit_maze"]

[node name="key" parent="SubViewportContainer/SubViewport/game/spirit_maze/keys" instance=ExtResource("15_f4wji")]
transform = Transform3D(0.996329, 0, 0, 0, 0.996329, 0, 0, 0, 0.996329, 2.5, -3.65652, -5.5)

[node name="key2" parent="SubViewportContainer/SubViewport/game/spirit_maze/keys" instance=ExtResource("15_f4wji")]
transform = Transform3D(0.996329, 0, 0, 0, 0.996329, 0, 0, 0, 0.996329, 6.58196, 8.5, -36.1366)

[node name="key3" parent="SubViewportContainer/SubViewport/game/spirit_maze/keys" instance=ExtResource("15_f4wji")]
transform = Transform3D(0.996329, 0, 0, 0, 0.996329, 0, 0, 0, 0.996329, -3.5, 3.22721, 11)

[node name="spiritcube" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 1, 2.5, -20.5)

[node name="spiritcube13" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 6.60728, 7.70678, -36.1083)

[node name="spiritcube14" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, 8.60957, 5.60134, -39.0592)

[node name="spiritcube15" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(0.847632, 0, -0.530585, 0, 1, 0, 0.530585, 0, 0.847632, 7.18636, 6.94706, -40.0395)

[node name="spiritcube16" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(0.847632, 0, -0.530585, 0, 1, 0, 0.530585, 0, 0.847632, 5.38623, 8.23139, -38.9637)

[node name="spiritcube2" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 1, 3, -24.5)

[node name="spiritcube8" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 2, 4.5, -28.5)

[node name="spiritcube3" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, -0.5, 3.5, -22.5)

[node name="spiritcube4" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2.5, 2)

[node name="spiritcube18" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 2.5, 11)

[node name="spiritcube5" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 3.5, 2)

[node name="spiritcube6" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, 5, 4)

[node name="spiritcube7" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 6, 5.5)

[node name="spiritcube9" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 0, -9)

[node name="spiritcube10" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 7.5, -1.5, -6.5)

[node name="spiritcube11" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(-1.49012e-08, 0, -1, 0, 1, 0, 1, 0, -1.49012e-08, 5.5, -3.5, -5)

[node name="spiritcube12" parent="SubViewportContainer/SubViewport/game/spirit_maze" instance=ExtResource("9_tp1s6")]
transform = Transform3D(-1.49012e-08, 0, -1, 0, 1, 0, 1, 0, -1.49012e-08, 2.5, -4.5, -5.5)

[connection signal="body_entered" from="SubViewportContainer/SubViewport/game/camera_areas/cam_1" to="SubViewportContainer/SubViewport/game/camera_controller" method="_on_cam_1_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/game/camera_areas/cam_2" to="SubViewportContainer/SubViewport/game/camera_controller" method="_on_cam_2_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/game/camera_areas/cam_3" to="SubViewportContainer/SubViewport/game/camera_controller" method="_on_cam_3_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/game/camera_areas/cam_4" to="SubViewportContainer/SubViewport/game/camera_controller" method="_on_cam_4_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/game/camera_areas/cam_5" to="SubViewportContainer/SubViewport/game/camera_controller" method="_on_cam_5_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/game/camera_areas/cam_6" to="SubViewportContainer/SubViewport/game/camera_controller" method="_on_cam_6_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/game/camera_areas/cam_7" to="SubViewportContainer/SubViewport/game/camera_controller" method="_on_cam_7_body_entered"]
